vlib/v/parser/tests/module_syntax_err.out
vlib/v/parser/tests/module_syntax_err.vv:1:12: error: `module main`, unexpected `.` after module name
    1 | module main.os
      |            ^
    2 | fn main() {
    3 |     println('hello, world')
